Fix: layout issues on mobile for main index page

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -12,6 +12,11 @@
     grid-column: 1 /-1;
   }
 
+  @include for-mobile-layout {
+    grid-template-columns: minmax(50px, 1fr) minmax(auto, 1920px) minmax(50px, 1fr);
+
+  }
+
 }
 
 .header-wrapper {
