--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -72,6 +72,14 @@
             justify-content: center;
           }
         }
+
+        @include for-mid-layout {
+          visibility: hidden;
+        }
+      }
+
+      @include for-mid-layout {
+        visibility: hidden;
       }
     }
   }
